--- a/myCompiler/my_keyword.cfg
+++ b/myCompiler/my_keyword.cfg
@@ -7,3 +7,25 @@ unsigned
 double
 float
 
+return
+
+enum
+
+struct
+
+class
+private
+protected
+public
+virtual
+
+switch
+case
+break
+default
+
+if
+else
+
+while
+do
