--- a/myCompiler/myCompiler.vcxproj
+++ b/myCompiler/myCompiler.vcxproj
@@ -159,6 +159,8 @@
     <ClCompile Include="myCompiler.cpp" />
     <ClCompile Include="RelationalOperator.cpp" />
     <ClCompile Include="Separator.cpp" />
+    <ClCompile Include="SetHelper.cpp" />
+    <ClCompile Include="SLRParser.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ArithmeticExpression.h" />
@@ -166,6 +168,7 @@
     <ClInclude Include="Assignment.h" />
     <ClInclude Include="BaseWord.h" />
     <ClInclude Include="Digit.h" />
+    <ClInclude Include="Examples.h" />
     <ClInclude Include="FileLoader.h" />
     <ClInclude Include="SetHelper.h" />
     <ClInclude Include="Highlight.h" />
@@ -176,6 +179,7 @@
     <ClInclude Include="RelationalOperator.h" />
     <ClInclude Include="Scanner.h" />
     <ClInclude Include="Separator.h" />
+    <ClInclude Include="SLRParser.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="my_keyword.cfg" />
