--- a/myCompiler/myCompiler.vcxproj.filters
+++ b/myCompiler/myCompiler.vcxproj.filters
@@ -68,9 +68,6 @@
     <ClCompile Include="Scanner.cpp">
       <Filter>Scanner</Filter>
     </ClCompile>
-    <ClCompile Include="SyntaxDirected.cpp">
-      <Filter>AutoSyntax</Filter>
-    </ClCompile>
     <ClCompile Include="Highlight.cpp">
       <Filter>Utility</Filter>
     </ClCompile>
@@ -145,6 +142,9 @@
     <ClInclude Include="ExampleCompiler.h">
       <Filter>CostumerCode</Filter>
     </ClInclude>
+    <ClInclude Include="DefinitionCompiler.h">
+      <Filter>CostumerCode</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="scanner_test.txt">
@@ -165,6 +165,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="my_syntax.syn">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="definition_syntax.syn">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="control_syntax.syn">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="complete_syntax.syn">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
